@@ -71,7 +71,11 @@ public final class LocalHtmlBuildEngine {
       BuildEvidence evidence = new BuildEvidence(
           attempt.getFileName().toString(), builderVersion, contract.templateVersion(), sourceBefore,
           inputHash, outputHash, certHash, identity.packageName(), "PASS", "PASS", Instant.now());
-      Files.writeString(attempt.resolve("build-evidence.json"), evidence.toJson());
+      Files.write(
+          attempt.resolve("build-evidence.json"),
+          evidence.toJson().getBytes(java.nio.charset.StandardCharsets.UTF_8),
+          StandardOpenOption.CREATE,
+          StandardOpenOption.TRUNCATE_EXISTING);
       return evidence;
     } catch (TemplateException e) { throw e; }
     catch (Exception e) { throw new TemplateException(TemplateErrorCode.OUTPUT_VERIFY_FAILED, "Local HTML build failed", e); }
